tests/snapshots/run_wpt_conformance__coreml_maxPool2d_float16_4D_tensor_options_outputSizes_ignores_options_outputShapeRounding_ceil.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
maxPool2d.https.any.js maxPool2d float16 4D tensor options.outputSizes ignores options.outputShapeRounding=ceil, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML pooling with outputSizes is not supported yet; got [2, 2] for maxPool2d

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    maxPool2dInput: f16[1, 2, 5, 5];
  }

  nodes {
    [maxPool2dOutput] = maxPool2d(maxPool2dInput, dilations=[], label="", layout="", outputShapeRounding="ceil", outputSizes=[2, 2], padding=[1, 0, 0, 1], strides=[2, 2], windowDimensions=[3, 3]);
  }

  outputs { maxPool2dOutput; }
}
